<resources>
    <string name="app_name">SkiRun</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Your Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_avilibility">Availibility</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="mission_preference">Mission Preferences</string>
    <string name="change_password_preferences">Change Password</string>
    <string name="role">role</string>
    <string name="club">club</string>
    <string name="other">Other</string>
    <string name="language">language</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry please</string>
    <string name="fieldsEmpty">Please do not leave empty fields</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="lastName">Your Lastname</string>
    <string name="firstName">Your Firstname</string>
    <string name="phone">Your phone</string>
    <string name="jobPreferences">Job preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missions">Missions</string>
    <string name="competition">Competion</string>
    <string name="discipline">Discipline</string>
    <string name="bip_number">Bib Number</string>
    <string name="done">Done</string>
    <string name="datemission">dateMission</string>
    <string name="descriptionmission">descriptionMission</string>
    <string name="results">Results</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="speed">speed</string>
    <string name="enterNumber">Please enter a number !</string>
    <string name="passwordtooshort">Password too short, enter minimum 6 characters!</string>
    <string name="enterResult">Please enter a result !</string>
    <string name="okbutton">The result has been saved</string>
    <string name="somethingbad">Something went bad, please retry !</string>
    <string name="capture">Capture</string>
    <string name="secondsOfVideo">%1$.3f seconds of videos</string>
    <string name="nowRecording">[Recording]</string>
    <string name="nowSaving">Saving the video</string>
    <string name="recordingSucceeded">Recording success</string>
    <string name="recordingFailed">Recording FAILED (err=%1$d)</string>
    <string name="beginrecord">Begin record</string>
    <string name="enterNumberCamera">Please enter the bib number</string>
    <string name="cancel">Cancel</string>
    <string name="plzEnterLN">Please enter your lastname</string>
    <string name="plzEnterFN">Please enter your firstname</string>
    <string name="plzEnterPhone">Please enter your phone</string>
    <string name="plzEnterData">Please enter your Data</string>
    <string name="username">Username</string>
    <string name="notImplemented">Language not implemented</string>
</resources>