<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/changePasswordProfileButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/change_password_preferences"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

        <Button
            android:id="@+id/clubButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/club"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roleButton" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/delete_account"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

        <TextView
            android:id="@+id/otherTextView"
            android:layout_width="347dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/other"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clubButton" />

        <Button
            android:id="@+id/languageButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otherTextView" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageButton" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/edit_profile"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountTextView" />

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="344dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/username"
            android:layout_width="329dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:text="username:aurelie@aurelie.com"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/missionPreferenceTextView"
            android:layout_width="344dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/mission_preference"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordProfileButton" />

        <Button
            android:id="@+id/roleButton"
            android:layout_width="345dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/role"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/missionPreferenceTextView" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>