<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.LanguageActivity"
    android:background="@drawable/gradient_background">


    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/english_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/french_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/french"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/german_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/german"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:buttonTint="@color/white"/>

    </RadioGroup>

</android.support.constraint.ConstraintLayout>